--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -6,10 +6,10 @@
 <header class="title_background">
 	<div class="row">
 		<div class="col-md-6">
-			<div class="jumbotron">
-			 	<h1 class="display-4">BookIt Event Manager</h1>
+			<div class="jumbotron" style="background-color: transparent;margin-top: -20%; margin-left: 10%">
+			 	<h1 class="display-4" style="font-family: fantasy">BookIt Event Manager</h1>
 			 	<hr class="my-4">
-				<p>BookIt is an Event management website through which you can create, book and cancel virtual events.
+				<p style="font-family: fantasy">BookIt is an Event management website through which you can create, book and cancel virtual events.
 				</p>
 			</div>
 			<div class="scroll_down_button">
