--- a/static/templates/navbar.html
+++ b/static/templates/navbar.html
@@ -4,8 +4,58 @@
 <script type="text/javascript">
     {% include "signin_form.js" %}
 </script>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 35%;
+  height: 85%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  padding-left: 410px;
+  padding-bottom: 10px;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+.chatbot{
+  width: 100%;
+  height: 100%;
+}
+</style>
+</head>
+
 <nav class="navbar navbar-expand-lg fixed-top navbar-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" style="background-color: white" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>    
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -40,6 +90,16 @@
         </button>
       </form>
       {% else %}
+      <button id="chat" type="button" class="btn btn-outline-primary my-2 my-sm-0 mr-2">
+        Chat
+      </button>
+      <div id="myModal" class="modal">
+          <!-- Modal content -->
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <iframe id='chatbot' src='https://webchat.botframework.com/embed/khushbooportfoliobot-bot?s=XtOuOIHx1ds.S_e_E_aNHranGTEdc56Y7N5V97EZ_7WLv3jcRpvhKak' class="chatbot"></iframe>
+          </div>
+      </div>
       <button type="button" class="btn btn-outline-primary my-2 my-sm-0 mr-2" data-toggle="modal" data-target="#signin_modal">
         Guest Registration
       </button>        
@@ -59,3 +119,30 @@
   {% include "signin_modal.html" %}
 </div>
 {% endif %}
+<script>
+  // Get the modal
+  var modal = document.getElementById("myModal");
+  
+  // Get the button that opens the modal
+  var btn = document.getElementById("chat");
+  
+  // Get the <span> element that closes the modal
+  var span = document.getElementsByClassName("close")[0];
+  
+  // When the user clicks the button, open the modal 
+  btn.onclick = function() {
+    modal.style.display = "block";
+  }
+  
+  // When the user clicks on <span> (x), close the modal
+  span.onclick = function() {
+    modal.style.display = "none";
+  }
+  
+  // When the user clicks anywhere outside of the modal, close it
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
+  </script>
