--- a/static/templates/navbar/navbar.html
+++ b/static/templates/navbar/navbar.html
@@ -2,13 +2,13 @@
     {% include "login_form.js" %}
 </script>
 <nav class="navbar navbar-expand-lg fixed-top navbar-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" style="background-color: white" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>    
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link"href="/">Home <span class="sr-only">(current)</span></a>
       </li>
       {% if current_user.is_authenticated == True %}
       <li class="nav-item">
