Adding pagination for events list.

--- a/static/templates/events_page.html
+++ b/static/templates/events_page.html
@@ -103,3 +103,41 @@
 	</div>
 	{% endfor %}
 </div>
+<ul id="pagin">
+
+</ul>
+<style>
+.current {
+  color: green;
+}
+
+#pagin li {
+  display: inline-block;
+}
+</style>
+<script>
+    	pageSize = 2;
+
+	var pageCount =  $(".events_row").length / pageSize;
+
+     for(var i = 0 ; i<pageCount;i++){
+
+       $("#pagin").append('<li><a href="#">'+(i+1)+'</a></li> ');
+     }
+        $("#pagin li").first().find("a").addClass("current")
+    showPage = function(page) {
+	    $(".events_row").hide();
+	    $(".events_row").each(function(n) {
+	        if (n >= pageSize * (page - 1) && n < pageSize * page)
+	            $(this).show();
+	    });
+	}
+
+	showPage(1);
+
+	$("#pagin li a").click(function() {
+	    $("#pagin li a").removeClass("current");
+	    $(this).addClass("current");
+	    showPage(parseInt($(this).text()))
+	});
+</script>
