--- a/static/templates/navbar/login.html
+++ b/static/templates/navbar/login.html
@@ -3,7 +3,7 @@
 {% block body_contents %}
 <form method="POST" action="login">
 	<p>
-	<input placeholder="Username" name="userid" style="width: 200px; height:33px;" >
+	<input placeholder="Username" name="zid" style="width: 200px; height:33px;" >
 	<p>
 	<input placeholder="Password" style="width: 200px; height:33px;" type="password" name="password" >
 	<p>
