--- a/static/templates/navbar/login_modal.html
+++ b/static/templates/navbar/login_modal.html
@@ -11,9 +11,9 @@
     <div class="modal-body">
       <form id="login_form" method="POST" action="/login">
         <div class="form-group row">
-          <label for="input_userid" class="col-sm-5 col-form-label">Username</label>
+          <label for="input_zid" class="col-sm-5 col-form-label">Username</label>
           <div class="col-sm-7">
-            <input class="form-control" name="userid" id="input_userid" placeholder="Please enter your username" required>
+            <input class="form-control" name="zid" id="input_zid" placeholder="Please enter your username" required>
           </div>
           {% if type == 'not exist' %}
           <div class="alert alert-danger alert-dismissible fade show col-sm-12" role="alert">
