--- a/static/templates/dashboard.html
+++ b/static/templates/dashboard.html
@@ -5,7 +5,7 @@
 </script>
 <header class="body_background">
 	<div class="jumbotron pull-right">
-	 	<h1 class="display-4">Dashboard</h1>
+	 	<h1 class="display-4" style="color:white;">Dashboard</h1>
  		<hr>
 		<p>Manage your events
 		</p>
