--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -7,7 +7,7 @@
 	<div class="row">
 		<div class="col-md-6">
 			<div class="jumbotron" style="background-color: transparent;margin-top: -20%; margin-left: 10%">
-			 	<h1 class="display-4" style="font-family: cursive; font-size: 4em; width: 800px; font-weight: bold">BookIt- Event Manager Application</h1>
+			 	<h1 class="display-4" style="font-family: cursive; font-size: 3em;font-weight: bold">BookIt- Event Manager Application</h1>
 			 	<hr class="my-4">
 				<p style="font-family: cursive; font-size: 20px;font-weight: bold">BookIt is an Event management website through which you can create, book and cancel virtual events.
 				</p>
