--- a/static/templates/navbar.html
+++ b/static/templates/navbar.html
@@ -94,33 +94,31 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-          <button type="button" class="btn btn-outline-primary my-2 my-sm-0 mr-2 chatbtn" style="height: 40px; background-color:plum ">
-              <a class="nav-link" href="/" style="margin-top: -5px">Home <span class="sr-only">(current)</span></a>
-          </button>
+          <a class="nav-link" href="/" style="color:white;">Home <span class="sr-only">(current)</span></a>
       </li>
       {% if current_user.is_authenticated == True %}
       <li class="nav-item">
-        <a class="nav-link" href="/dashboard">Dashboard</a>
+        <a class="nav-link" href="/dashboard" style="color:white;">Dashboard</a>
       </li>
       {% if event is defined and guestSpeaking is defined %}
         {% if guestSpeaking == true %}
         <li class="nav-item">
-          <a class="nav-link" href="/event/{{ event.id }}/speaker_profile">Profile</a>
+          <a class="nav-link" href="/event/{{ event.id }}/speaker_profile" style="color:white;">Profile</a>
         </li>
         {% endif %}
       {% endif %}
       {% if current_user is Staff %}
       <li class="nav-item">
-        <a class="nav-link" href="/add_event">Add Event</a>
+        <a class="nav-link" href="/add_event" style="color:white;">Add Event</a>
       </li>
       {% endif %}
       {% endif %}
     </ul>
     <div class="form-inline my-2 my-lg-0" style="margin-right: 170px;">
       {% if current_user.is_authenticated == True %}
-      <span style="margin-right: 10px">Hi, {{ current_user.name  }}</span>
+      <span style="margin-right: 10px;color:white;">Hi, {{ current_user.name  }}</span>
       <form id='logout' method="POST" action="/logout">
-        <button type="submit" class="btn btn-outline-success my-2 my-sm-0" name="logout" value="logout">
+        <button type="submit" class="btn btn-outline-success my-2 my-sm-0 loginbtn" name="logout" value="logout">
         Logout
         </button>
       </form>
@@ -165,8 +163,10 @@
   var span = document.getElementsByClassName("close")[0];
   
   // When the user clicks the button, open the modal 
+  if(btn != null){
   btn.onclick = function() {
     modal.style.display = "block";
+  }
   }
   
   // When the user clicks on <span> (x), close the modal
