--- a/static/templates/navbar/navbar.html
+++ b/static/templates/navbar/navbar.html
@@ -8,24 +8,24 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link"href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link"href="/" style="color:white;">Home <span class="sr-only">(current)</span></a>
       </li>
       {% if current_user.is_authenticated == True %}
       <li class="nav-item">
-        <a class="nav-link" href="/dashboard">Dashboard</a>
+        <a class="nav-link" href="/dashboard" style="color:white;">Dashboard</a>
       </li>
       {% if current_user is Staff %}
       <li class="nav-item">
-        <a class="nav-link" href="/add_event">Add Event</a>
+        <a class="nav-link" href="/add_event" style="color:white;">Add Event</a>
       </li>
       {% endif %}
       {% endif %}
     </ul>
     <div class="form-inline my-2 my-lg-0">    
       {% if current_user.is_authenticated == True %}
-      <span style="margin-right: 10px">Hi, {{ current_user.name  }}</span>
+      <span style="margin-right: 10px;color:white;">Hi, {{ current_user.name  }}</span>
       <form id='logout' method="POST" action="/logout">
-        <button type="submit" class="btn btn-outline-success my-2 my-sm-0" name="logout" value="logout">
+        <button type="submit" class="btn btn-outline-success my-2 my-sm-0 loginbtn" name="logout" value="logout">
         Logout
         </button>
       </form>
