--- a/static/templates/base.html
+++ b/static/templates/base.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>BookIt Event Manager</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="BookItems is an Event management website through which you can create, book and cancel virtual events.">
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 		<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
