Adding In-person and virtual events

--- a/static/templates/add_event.html
+++ b/static/templates/add_event.html
@@ -59,8 +59,8 @@
                 <div class="form-group">
                     <label for="event-type">Event Type</label>
                     <select id="event-type" name="type" class="form-control" required>
-                        <option value="course">Course Event</option>
-                        <option value="seminar">Seminar Event</option>
+                        <option value="course">Virtual Event</option>
+                        <option value="seminar">In Person Event</option>
                     </select>
                 </div>
                 <div class="form-group">
