--- a/static/templates/components/event_detail/event.html
+++ b/static/templates/components/event_detail/event.html
@@ -43,10 +43,10 @@
 			<h3 class="pb-3 mb-4 font-italic border-bottom">
       	{{event.name}}
         {% if event is SeminarEvent %}
-        <span class="badge badge-pill badge-warning">seminar</span>
+        <span class="badge badge-pill badge-warning">In person</span>
         {% endif %}
         {% if event is CourseEvent %}
-        <span class="badge badge-pill badge-info">course</span>
+        <span class="badge badge-pill badge-info">Virtual</span>
         {% endif %}
     	</h3>      
       <div class="event-description">
